ui alignment fixes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,3 +34,7 @@
 .navbar-default .navbar-nav > li > a.active {
     background-color: #e7e7e7;
 }
+
+.filter-field{
+    margin-right: 20px;
+}
